<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Obras">


    <Button
        android:id="@+id/btnUbicacionO"
        android:layout_width="176dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="212dp"
        android:backgroundTint="@color/azul"
        android:text="@string/ubicacion"
        app:layout_constraintEnd_toEndOf="@+id/textlatitudobras"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="@+id/textlongitudobras"
        app:layout_constraintTop_toBottomOf="@+id/imgObras" />

    <Button
        android:id="@+id/btnReportarIncidenteObr"
        android:layout_width="218dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/azul"
        android:text="@string/reportar_incidente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textObservacionObr"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textObservacionObr"
        app:layout_constraintTop_toBottomOf="@+id/textObservacionObr" />

    <EditText
        android:id="@+id/textObservacionObr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/observaciones"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnUbicacionO"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/btnUbicacionO"
        app:layout_constraintTop_toBottomOf="@+id/btnUbicacionO" />

    <Button
        android:id="@+id/btnTomarFotoObr"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/azul"
        android:text="Tomar foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgObras"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgObras"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCargarObr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/azul"
        android:text="@string/cargar_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/btnTomarFotoObr"
        app:layout_constraintTop_toBottomOf="@+id/imgObras"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgObras"
        android:layout_width="187dp"
        android:layout_height="186dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/interbus" />

    <TextView
        android:id="@+id/textlongitudobras"
        android:layout_width="177dp"
        android:layout_height="22dp"
        android:layout_marginTop="84dp"
        android:hint="@string/longitud"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btnTomarFotoObr"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/btnTomarFotoObr"
        app:layout_constraintTop_toTopOf="@+id/btnTomarFotoObr" />

    <TextView
        android:id="@+id/textlatitudobras"
        android:layout_width="166dp"
        android:layout_height="26dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:hint="@string/latitud"
        app:layout_constraintEnd_toEndOf="@+id/btnCargarObr"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/btnCargarObr"
        app:layout_constraintTop_toBottomOf="@+id/btnCargarObr" />


</androidx.constraintlayout.widget.ConstraintLayout>