<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/listaCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="402dp"
            android:layout_height="178dp">


            <TextView
                android:id="@+id/nombre1"
                android:layout_width="148dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"

                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="141dp"
                android:layout_marginBottom="123dp"
                android:gravity="center"
                android:text="@string/nombre"
                android:textSize="10sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/correo1"
                android:layout_width="144dp"
                android:layout_height="43dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="142dp"
                android:layout_marginBottom="66dp"
                android:gravity="center"
                android:text="@string/correo"
                android:textSize="10sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/enviarnoti"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="6dp"
                android:text="@string/enviar"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tokens"
                android:layout_width="144dp"
                android:layout_height="43dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="142dp"
                android:layout_marginBottom="14dp"
                android:gravity="center"
                android:text="@string/token"
                android:textSize="10sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>